# atividade-vivencial-14-6

./: CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
shaders/: fragment.glsl  sprite.fs  sprite.vs  vertex.glsl
src/: Sprite.cpp  Sprite.h  main.cpp
